@startuml SkillCard
title SkillCard

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontStyle Bold
skinparam classAttributeFontSize 12

abstract class SkillCard {
    # remainingUses : int
    --
    + {abstract} execute(player : Player&, game : Game&) : void
    + isUsable() : bool
}

class MoveCard {
    - steps : int
    --
    + execute(player : Player&, game : Game&) : void
    + getSteps() : int
}

class DiscountCard {
    - discountPercent : int
    - duration : int
    --
    + execute(player : Player&, game : Game&) : void
    + getDiscount() : int
    + decrementDuration() : void
}

class ShieldCard {
    - duration : int
    --
    + execute(player : Player&, game : Game&) : void
    + decrementDuration() : void
}

class TeleportCard {
    --
    + execute(player : Player&, game : Game&) : void
}

class LassoCard {
    --
    + execute(player : Player&, game : Game&) : void
}

class DemolitionCard {
    --
    + execute(player : Player&, game : Game&) : void
}

SkillCard <|-- MoveCard
SkillCard <|-- DiscountCard
SkillCard <|-- ShieldCard
SkillCard <|-- TeleportCard
SkillCard <|-- LassoCard
SkillCard <|-- DemolitionCard

@enduml